<com.example.utils.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:knightneo="http://schemas.android.com/apk/res/com.example.projectexample"
    android:id="@+id/home_page"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    knightneo:rightPadding="100dp" >

    <!-- 这是整个界面，左边是滑动菜单，右边是主界面 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <!-- 左边滑动菜单 -->

        <include layout="@layout/layout_menu" />

        <!-- 右边主界面 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_background"
            android:orientation="vertical" >

            <!-- 标题栏 -->

            <include layout="@layout/layout_bar" />

            <!-- 已连接时主界面主要内容 -->

            <LinearLayout
                android:id="@+id/connected_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <!-- 这里分成三个部分 -->
                <!--  -->
                <!-- 第一部分:显示设备名称和连接状态 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <!-- 设备名称，这个不显示 -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_device_name"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!-- 设备地址，这个不显示 -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_device_address"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!-- 连接状态 -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_state"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/connection_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disconnected"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!-- 广播数据，这个不显示 -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_data"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/data_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_data"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <!-- 服务和特性，这个不显示 -->

                    <ExpandableListView
                        android:id="@+id/gatt_services_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                </LinearLayout>

                <!-- 第二部分:显示心率 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/text_view_heart_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="心率:无" />
                </LinearLayout>

                <!-- 第三部分:显示心电图 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="vertical" >

                    <FrameLayout
                        android:id="@+id/layout_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:onClick="save" />
                </LinearLayout>

                <!-- 第四部分:保存按钮 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="save"
                        android:orientation="horizontal"
                        
                        android:textColor="#ffffff"
                        android:textSize="25sp"
                        android:background="#000000" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="保存"
                            android:textColor="#ffffff"
                            android:textSize="25sp"
                            android:gravity="center" />
                       
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 未连接时主界面主要内容 -->

            <LinearLayout
                android:id="@+id/disconnected_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="connect"
                    android:src="@drawable/bluetooth_not_found" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</com.example.utils.SlidingMenu>